add self/kind properties to more responses.
